Fixed footer jumping up because of last child node margin, still working on responsive bootstrap navbar

--- a/style.css
+++ b/style.css
@@ -5,23 +5,25 @@ html,body {
 	height: 100%;
 }
 
-nav {
-	border: 0 !important;
-	border-radius: 0 !important;
-	height: 100px;
-	background-color: #ffffff !important;
-	margin-bottom: 0 !important;
+.navbar {
+	height: 110px;
+	margin-bottom: 0;
 }
 
-.nav-item {
-	margin-top: 30px;
-	font-weight: 700;
+.navbar-brand {
+	margin: 5px 0 5px 5px;
+	padding: 0;
+}
+
+#logo {
+	height: 90px;
+	width: 200px;
+}
+
+.nav-link {
 	text-transform: uppercase;
-}
-
-.nav-item:hover {
-	background-color: #fcec9c !important;
-	border-radius: 5px;
+	font-size: 1.2em;
+	font-weight: 600;
 }
 
 .four-gal {
@@ -29,12 +31,6 @@ nav {
 	width: 100%;
 }
 
-
-.logo {
-	height: 94px;
-	width: 195px;
-	margin-top: -12px;
-}
 
 .carousel-inner {
 	width: 100%;
@@ -127,7 +123,7 @@ footer {
 	background-color: #9b9b9b;
 	color: white;
 	min-height: 230px;
-	max-height: 300px;
+	max-height: 370px;
 }
 
 .foot-item {
@@ -139,4 +135,11 @@ footer {
 	margin-right: 10px;
 }
 
-
+@media only screen and (min-width: 768px) {
+	.nav {
+		height: 120px;
+	}
+	.navbar-brand, .navbar-nav {
+		display: block;
+	}
+}
